load("@rules_release_file//:index.bzl", "release")

genrule(
    name = "foo",
    srcs = [],
    outs = ["tst.json"],
    cmd = "echo '{\"key\": 1}' > \"$@\"",
)

release(
    name = "foo_release",
    files = [
        ":foo",
    ],
    increments = {
        "key": "1",
    },
)

release(
    name = "json_release",
    files = [
        "app.json",
    ],
    increments = {
        "foo.bar.Code": "1",
        "foo.baz.Number": "1",
    },
    substitutions = {
        "foo.version": "{STABLE_GIT_DATE}",
    },
)

release(
    name = "yaml_release",
    files = [
        "app.yaml",
    ],
    increments = {
        "metadata.labels.version": "1",
    },
    substitutions = {
        "metadata.labels.commit": "{STABLE_GIT_COMMIT}",
    },
)
